# python-roadmap-examples

./: .gitignore  .ignore  LICENSE  README.md  notas.md  requirements.txt
00-Introducción/: notas.md
01-Entornos-Virtuales/: 01_01_pyenv-commands.md
01-pyenv/: 01-pyenv-commands.md  01-pyenv-faq.md  README.md
01_entornos_virtuales/: 01_02_venv_commands.md  01_03_guia_entorno_poetry_pipx.md  README.md
02-Archivo-requirements-txt/: README.md
03-Modulos-Paquetes/: README.md
04_configuracion_ambientes/: README.md
jupyter-notebook/: 00_check_python_kernel_version.ipynb  00_hola_mundo.ipynb  00_instalacion_entorno_virtual_jupyter_kernel.md  README.md  pyproject.toml  requirements.txt
jupyter-notebook/01_hola_mundo/: 01_1_hola_mundo.ipynb
jupyter-notebook/05_variables/: 05_01_variables_introduccion.ipynb  README.md
jupyter-notebook/05_variables_tipos_datos/: 05_02_variables_conversiones.ipynb  README.md
jupyter-notebook/06_cadenas/: 06_01_cadenas_introduccion.ipynb  06_02_cadenas_indices.ipynb  06_03_cadenas_concatenacion.ipynb  06_03_cadenas_concatenacion_formatos.ipynb  06_04_cadenas_metodos.ipynb  README.md
jupyter-notebook/11_clases_objetos/: 11_02_clases_constructores.ipynb  11_03_clases_objetos_memoria.ipynb  11_04_clases_objetos_ejercicio_aritmetica.ipynb  11_05_clases_objetos_flexibilidad_constructores.ipynb  11_06_clases_encapsulamiento.ipynb  11_07_clases_objetos_encapsulamiento_aritmetica.ipynb  11_08_clases_metodos_atributos_clase.ipynb  11_08_clases_objetos atributos_clase.ipynb  11_1_clases_objetos.ipynb
proyectos/proyecto1-python313/: .flake8  main.py
proyectos/proyecto313_poetry/: pyproject.toml
proyectos/proyecto313_poetry/src/proyecto3_poetry/: main.py
(+1 files in other folders)
