[project]
name = "jupyter-notebook"
version = "0.1.0"
description = ""
authors = [
    {name = "Wilt R",email = "wrovira@duck.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
notebook = "^7.4.5"
ipykernel = "^6.30.1"

