[project]
name = "proyecto3-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Wilt R",email = "wrovira@duck.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "proyecto3_poetry", from = "src"}]


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
